Added saveImage boolean
