# src/models/Customer.ts
@@ -5,4 +5,7 @@ import { User } from './User';
 export class Customer extends User {
   @Column({ default: 0 })
   points!: number;
+
+  @Column({ type: 'bool' })
+  saveImage!: boolean;
 }
